# rust_test_home

10_dz/test_patterns/: Cargo.toml
10_dz/test_patterns/examples/: use_dynamic.rs  use_patterns.rs  use_static.rs
10_dz/test_patterns/src/: dynamic_v.rs  lib.rs
11_dz/smart_home_error/src/: smart_devices.rs
11_dz/smart_home_error/tests/: integration_tests.rs
12_dz/test_rust_patterns/examples/: use_rust_patterns.rs
12_dz/test_rust_patterns/src/: lib.rs  patterns.rs  static_v.rs
13_dz/smart_home_http/: Cargo.toml
13_dz/smart_home_http/client/: Cargo.toml
13_dz/smart_home_http/examples/: main.rs  server.rs
13_dz/smart_home_http/frontend/: Cargo.toml  index.html  style.css
13_dz/smart_home_http/py_test/: Untitled.ipynb
13_dz/smart_home_http/server/: Cargo.toml
13_dz/smart_home_http/server/src/: main.rs
13_dz/smart_home_http/smart_home_lib/: Cargo.toml
13_dz/smart_home_http/src/: smart_devices.rs  smart_house.rs  smart_house_errors.rs
14_dz/: Cargo.toml
14_dz/client_socket/: Cargo.toml
14_dz/server_socket/src/: main.rs
15_dz/: Readme
15_dz/smart_socket_c++/: CMakeLists.txt
15_dz/smart_socket_client/: Cargo.toml
3_dz/rust-play/: Cargo.toml
5_dz/smart_home/: Cargo.toml
8_dz/smart_termometr/: Cargo.toml
9_dz/smart_socket_termometr_async/: Cargo.toml
9_dz/smart_socket_termometr_async/client_termometr_async/: Cargo.toml
9_dz/smart_socket_termometr_async/client_termometr_async/src/: main.rs
diplom/Present/: Менеджер задач в телеграмм боте».pptx
diplom/tg_task/: Cargo.toml
diplom/tg_task_2/: Cargo.toml
diplom/tg_task_2/src/: bot.rs  config.rs  controllers.rs  database.rs  error.rs  interface_tg.rs  main.rs  statemashine.rs  task.rs  test_tasks.rs
diplom/tg_task_2/src/migration/: mod.rs
diplom_database/: task.db
(+54 files in other folders)
