[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.*"
anyhow = "1.0.*"
serde = "1.*"
smart_home_lib = { path = "./../smart_home_lib" }
#rocket = "0.5.0-rc.3"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
