[package]
name = "client_termometr_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trprot_udp_async = { path = "./../trprot_udp_async" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.19.2", features = [
    "net",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "io-util",
] }
